--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="dimensions">
+<!-- <form [formGroup]="dimensions">
     <label for="width">Width:</label>
     <input id="width" type="number" formControlName="width" min="0" max="100">
     <br />
@@ -6,4 +6,5 @@
     <input id="height" type="number" formControlName="height" min="0" max="100">
 </form>
 <br />
-<app-grid [width]="this.dimensions.controls['width'].value" [height]="this.dimensions.controls['height'].value"></app-grid>
+<app-grid [width]="this.dimensions.controls['width'].value" [height]="this.dimensions.controls['height'].value"></app-grid> -->
+<app-account-editor></app-account-editor>
