--- a/src/app/accounts/components/account-editor/account-editor.component.html
+++ b/src/app/accounts/components/account-editor/account-editor.component.html
@@ -39,34 +39,7 @@
         </div>
       </div>
       <br />
-      <ul class="list-group">
-        <li class="list-group-item bg-light">
-          Phone numbers
-        </li>
-        <li class="list-group-item" *ngFor="let phone of account.phoneNumbers">
-          {{phone.number}}
-          <span class="badge badge-primary float-right">
-            {{PhoneType[phone.type] | titlecase}}
-          </span>
-        </li>
-        <li class="list-group-item">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false"></button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);">
-                  TYPE
-                </a>
-              </div>
-            </div>
-            <input type="text" class="form-control" placeholder="Add phone...">
-            <div class="input-group-append">
-              <button class="btn btn-info" type="button">Add</button>
-            </div>
-          </div>
-        </li>
-      </ul>
+      <app-phone-manager [phones]="account.phoneNumbers"></app-phone-manager>
       <br />
       <button class="btn btn-lg btn-success btn-block" type="button">
         Save
