Add phone types to dropdown.

--- a/src/app/shared/components/phone-manager/phone-manager.component.html
+++ b/src/app/shared/components/phone-manager/phone-manager.component.html
@@ -14,8 +14,8 @@
               <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false"></button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);">
-                  TYPE
+                <a class="dropdown-item" href="javascript:void(0);" *ngFor="let type of PhoneTypes">
+                  {{PhoneType[type]}}
                 </a>
               </div>
             </div>
