--- a/src/app/shared/components/phone-manager/phone-manager.component.html
+++ b/src/app/shared/components/phone-manager/phone-manager.component.html
@@ -12,16 +12,16 @@
           <div class="input-group">
             <div class="input-group-prepend">
               <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false"></button>
+                aria-haspopup="true" aria-expanded="false">{{PhoneType[selectedPhoneType]}}</button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="javascript:void(0);" *ngFor="let type of PhoneTypes">
+                <button class="dropdown-item" (click)="selectedPhoneType = type" *ngFor="let type of PhoneTypes">
                   {{PhoneType[type]}}
-                </a>
+                </button>
               </div>
             </div>
-            <input type="text" class="form-control" placeholder="Add phone...">
+            <input #phone type="text" class="form-control" placeholder="Add phone...">
             <div class="input-group-append">
-              <button class="btn btn-info" type="button">Add</button>
+              <button class="btn btn-info" type="button" (click)="addPhone(phone.value, selectedPhoneType)">Add</button>
             </div>
           </div>
         </li>
