Add two way binding to editor component.

--- a/src/app/accounts/components/account-editor/account-editor.component.html
+++ b/src/app/accounts/components/account-editor/account-editor.component.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <br />
-      <app-phone-manager [phones]="account.phoneNumbers"></app-phone-manager>
+      <app-phone-manager [(phones)]="account.phoneNumbers"></app-phone-manager>
       <br />
       <button class="btn btn-lg btn-success btn-block" type="button">
         Save
