--- a/src/app/shared/components/phone-manager/phone-manager.component.html
+++ b/src/app/shared/components/phone-manager/phone-manager.component.html
@@ -5,20 +5,12 @@
         <li class="list-group-item" *ngFor="let phone of phones">
           {{phone.number}}
           <span class="badge badge-primary float-right">
-            {{PhoneType[phone.type] | titlecase}}
+            {{phone.type}}
           </span>
         </li>
         <li class="list-group-item">
           <div class="input-group">
-            <div class="input-group-prepend">
-              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">{{PhoneType[selectedPhoneType]}}</button>
-              <div class="dropdown-menu">
-                <button class="dropdown-item" (click)="selectedPhoneType = type" *ngFor="let type of PhoneTypes">
-                  {{PhoneType[type]}}
-                </button>
-              </div>
-            </div>
+            <app-dropdown [(model)]="selectedPhoneType" [options]="PhoneTypes"></app-dropdown>
             <input #phone type="text" class="form-control" placeholder="Add phone...">
             <div class="input-group-append">
               <button class="btn btn-info" type="button" (click)="addPhone(phone.value, selectedPhoneType)">Add</button>
