--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
 </form>
 <br />
 <app-grid [width]="this.dimensions.controls['width'].value" [height]="this.dimensions.controls['height'].value"></app-grid> -->
-<app-account-editor></app-account-editor>
+<!-- <app-account-editor></app-account-editor> -->
+<router-outlet></router-outlet>
