--- a/src/app/accounts/components/account-list/account-list.component.html
+++ b/src/app/accounts/components/account-list/account-list.component.html
@@ -3,11 +3,11 @@
         Add new Account
     </a>
     <div class="clearfix"></div>
-    <div>
-        <div class="alert">
+    <div *ngIf="accounts$ | async as accounts">
+        <div *ngIf="!accounts" class="alert">
             No accounts found.
         </div>
-        <table class="table table-striped table-condensed">
+        <table *ngIf="accounts" class="table table-striped table-condensed" >
             <thead>
                 <tr>
                     <th>Name</th>
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let account of accounts$ | async">
+                <tr *ngFor="let account of accounts">
                     <td>
                         <a>{{account.name}}</a>
                     </td>
