--- a/src/app/accounts/components/account-editor/account-editor.component.html
+++ b/src/app/accounts/components/account-editor/account-editor.component.html
@@ -22,14 +22,14 @@
           <br />
           <div class="form-group">
             <label for="account_isEmployee">
-              <input type="checkbox" id="account_isEmployee" [(ngModel)]="account.isEmployee" /> Employee
+              <input type="checkbox"  id="account_isEmployee" [(ngModel)]="account.isEmployee" /> Employee
             </label>
           </div>
           <div class="form-group">
             <label for="account_departmentId">
               Department
             </label>
-            <select id="account_departmentId" [(ngModel)]="account.departmentId" class="form-control">
+            <select [disabled]="!account.isEmployee" id="account_departmentId" [(ngModel)]="account.departmentId" class="form-control">
               <option [ngValue]="null"></option>
               <option *ngFor="let department of departments" [value]="department.id">
                 {{department.name}}
@@ -41,7 +41,7 @@
       <br />
       <app-phone-manager [(phones)]="account.phoneNumbers"></app-phone-manager>
       <br />
-      <button class="btn btn-lg btn-success btn-block" type="button">
+      <button class="btn btn-lg btn-success btn-block" [disabled]="isSaving" (click)="save()" type="button">
         Save
       </button>
     </div>
